# kawakami-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  REFACTOR_PLAN.md  brand.json  deploy.sh  docker-compose.yml  pyproject.toml  ruff.toml
app/: app.json
demo/: APPS_SDK_STUDY.md  DIRECTION.md
demo/tools/: busca.html  carrinho.html  departamentos.html  index.html  ofertas.html
docs/superpowers/plans/: 2026-06-23-mcp-hardening.md  2026-06-23-native-widget-ui.md  2026-06-23-oauth-auth0.md
docs/superpowers/specs/: 2026-06-23-mcp-hardening-design.md  2026-06-23-native-widget-ui-design.md  2026-06-23-oauth-auth0-design.md
src/: config.py  main.py  server.py
src/domain/: exceptions.py  models.py
src/infrastructure/: auth.py  auth0_verifier.py  auth_required.py  circuit_breaker.py  error_handler.py  session_store.py  sessions.py  validation.py  vipcommerce_client.py
src/presentation/: formatters.py  structured.py  widget.py
src/tools/: busca.py  carrinho.py  catalogo.py  listas.py  ofertas.py
tests/: conftest.py  test_auth.py  test_auth0_verifier.py  test_auth_required.py  test_circuit_breaker.py  test_config_and_cache.py  test_error_handler.py  test_formatters.py  test_health.py  test_mcp_app.py  test_models.py  test_session_store.py  test_sessions.py  test_structured.py  test_tools.py  test_validation.py  test_vipcommerce_client.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  bridge.ts  data.ts  main.css  main.tsx
ui/src/components/: CartCard.tsx  CartDrawer.tsx  CartWidget.tsx  (+4 more)
